<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosgraph_monitor_test</name>
  <version>0.2.1</version>
  <description>Test package for rosgraph_monitor containing launch tests and test utilities</description>
  <maintainer email="troy@polymathrobotics.com">Troy Gibb</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>


  <exec_depend>rclpy</exec_depend>

  <test_depend>rosgraph_monitor_msgs</test_depend>
  <test_depend>rosgraph_monitor</test_depend>
  <test_depend>diagnostic_msgs</test_depend>
  <test_depend>std_msgs</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
