<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosgraph_monitor</name>
  <version>0.2.3</version>
  <description>Monitors the ROS graph to detect error conditions</description>
  <maintainer email="emerson.b.knapp@gmail.com">Emerson Knapp</maintainer>
  <maintainer email="troy@polymathrobotics.com">Troy Gibb</maintainer>
  <license>Apache License 2.0</license>
  <author email="emerson.knapp@bonsairobotics.ai">Emerson Knapp on behalf of Bonsai Robotics</author>
  <author email="troy@polymathrobotics.com">Troy Gibb</author>
  <author email="josh@electrifiedautonomy.com">Joshua Whitley</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>generate_parameter_library</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rosgraph_monitor_msgs</depend>

  <exec_depend>diagnostic_aggregator</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rmw_implementation</test_depend>
  <test_depend>rmw_stats_shim</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
